--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -69,6 +69,12 @@
                         <a href="@Url.Action("Index", "GiangVien")" class="nav-item nav-link">
                             <i class="fa fa-keyboard me-2"></i>Giảng Viên
                         </a>
+                        <a href="@Url.Action("Index", "DiemDanhGiangVien")" class="nav-item nav-link">
+                            <i class="fa fa-keyboard me-2"></i>Điểm Danh Giảng Viên
+                        </a>
+                        <a href="@Url.Action("Index", "DiemDanhHocVien")" class="nav-item nav-link">
+                            <i class="fa fa-keyboard me-2"></i>Điểm Danh Học Viên
+                        </a>
                         <div class="sb-sidenav-footer">
                             <div class="small">Logged in as:</div>
                             Start Bootstrap
