--- a/QuanLyThongTinDaoTao/Views/Courses/Register.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Courses/Register.cshtml
@@ -15,7 +15,8 @@
                          alt="@Model.KhoaHoc.TenKhoaHoc">
                     <div class="card-body">
                         <h5 class="card-title text-center">@Model.KhoaHoc.TenKhoaHoc</h5>
-                        <p class="card-text">@Model.KhoaHoc.MoTa</p>
+                        <p class="card-text">@Html.Raw(Model.KhoaHoc.MoTa)</p>
+                       
                     </div>
                 </div>
             </div>
