--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Index.cshtml
@@ -22,6 +22,7 @@
                         <th>STT</th>
                         <th>Mã Giảng Viên</th>
                         <th>Họ và Tên</th>
+                        <th>Ngày Sinh</th>
                         <th>Email</th>
                         <th>Chuyên Môn</th>
                         <th>Học Hàm</th>
@@ -37,6 +38,7 @@
                                 <td>@stt</td>
                                 <td>@item.MaGiangVien</td>
                                 <td>@item.HoVaTen</td>
+                                <td>@item.NgaySinh.ToShortDateString()</td>
                                 <td>@item.Email</td>
                                 <td>@item.ChuyenMon</td>
                                 <td>@item.HocHam</td>
