--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Edit.cshtml
@@ -1,22 +1,21 @@
-﻿@model QuanLyThongTinDaoTao.Models.GiangVien
-
+﻿@model QuanLyThongTinDaoTao.Models.HocVien
 @{
-    ViewBag.Title = "Chỉnh Sửa Giảng Viên";
+    ViewBag.Title = "Chỉnh Sửa Học Viên";
     Layout = "~/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml";
 }
 
 <div class="container mt-5">
     <div class="card shadow-lg">
         <div class="card-header bg-warning text-white text-center">
-            <h3><i class="fa-solid fa-pen-to-square"></i> Chỉnh Sửa Giảng Viên</h3>
+            <h3><i class="fa-solid fa-pen-to-square"></i> Chỉnh Sửa Học Viên</h3>
         </div>
         <div class="card-body">
-            @using (Html.BeginForm("Edit", "GiangVien", FormMethod.Post))
+            @using (Html.BeginForm("Edit", "HocVien", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(model => model.NguoiDungId)
 
-                <div class="row">
+            <div class="row">
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.HoVaTen, "Họ và Tên", new { @class = "form-label" })
                         @Html.TextBoxFor(model => model.HoVaTen, new { @class = "form-control", required = "required" })
@@ -26,32 +25,28 @@
                         @Html.LabelFor(model => model.NgaySinh, "Ngày Sinh", new { @class = "form-label" })
                         @Html.TextBoxFor(model => model.NgaySinh, "{0:yyyy-MM-dd}", new { @class = "form-control", type = "date", required = "required" })
                         @Html.ValidationMessageFor(model => model.NgaySinh, "", new { @class = "text-danger" })
-                    </div>
+                    </div>  
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.Email, "Email", new { @class = "form-label" })
+                    @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @readonly = "readonly" })
                 </div>
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.SoDienThoai, "Số Điện Thoại", new { @class = "form-label" })
+                    @Html.TextBoxFor(model => model.SoDienThoai, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.SoDienThoai, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
 
                 <div class="row">
-                    <div class="col-md-6 mb-3">
-                        @Html.LabelFor(model => model.ChuyenMon, "Chuyên Môn", new { @class = "form-label" })
-                        @Html.TextBoxFor(model => model.ChuyenMon, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.ChuyenMon, "", new { @class = "text-danger" })
+                    <div class="col-md-12 mb-3">
+                        @Html.LabelFor(model => model.CoQuanLamViec, "Cơ Quan Làm Việc", new { @class = "form-label" })
+                        @Html.TextBoxFor(model => model.CoQuanLamViec, new { @class = "form-control", type = "tel", required = "required" })
+                        @Html.ValidationMessageFor(model => model.CoQuanLamViec, "", new { @class = "text-danger" })
                     </div>
-                    <div class="col-md-6 mb-3">
-                        @Html.LabelFor(model => model.Email, "Email", new { @class = "form-label" })
-                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @readonly = "readonly" })
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-6 mb-3">
-                        @Html.LabelFor(model => model.HocHam, "Học Hàm", new { @class = "form-label" })
-                        @Html.TextBoxFor(model => model.HocHam, new { @class = "form-control" })
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        @Html.LabelFor(model => model.SoDienThoai, "Số Điện Thoại", new { @class = "form-label" })
-                        @Html.TextBoxFor(model => model.SoDienThoai, new { @class = "form-control", type = "tel", required = "required" })
-                        @Html.ValidationMessageFor(model => model.SoDienThoai, "", new { @class = "text-danger" })
-                    </div>
-
                 </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-primary me-2 btn-lg">
