--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/_LopHocTablePartial.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/_LopHocTablePartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<QuanLyThongTinDaoTao.Models.LopHoc>
+@using QuanLyThongTinDaoTao.Models;
 
 @{ int stt = 1; }
-
 @foreach (var lophoc in Model)
 {
     <tr class="text-center">
@@ -13,9 +13,18 @@
         <td>@lophoc.NgayBatDau.ToString("dd/MM/yyyy")</td>
         <td>@lophoc.NgayKetThuc.ToString("dd/MM/yyyy")</td>
         <td>
-            <span class="badge bg-@(lophoc.TrangThai == "SapMo" ? "primary" : (lophoc.TrangThai == "DangHoc" ? "success" : "secondary"))">
-                @(lophoc.TrangThai == "SapMo" ? "Sắp Mở" : (lophoc.TrangThai == "DangHoc" ? "Đang Học" : "Đã Kết Thúc"))
-            </span>
+            @{
+                var trangThaiText = lophoc.TrangThai == TrangThaiLopHoc.SapMo ? "Sắp Mở"
+                    : lophoc.TrangThai == TrangThaiLopHoc.DangHoc ? "Đang Học"
+                    : "Đã Kết Thúc";
+
+                var badgeClass = lophoc.TrangThai == TrangThaiLopHoc.SapMo ? "bg-primary"
+                    : lophoc.TrangThai == TrangThaiLopHoc.DangHoc ? "bg-success"
+                    : "bg-secondary";
+            }
+
+            <span class="badge @badgeClass">@trangThaiText</span>
+
         </td>
         <td>
             <a href="@Url.Action("Details", new { id = lophoc.LopHocId })" class="btn btn-info btn-sm">
