--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Edit.cshtml
@@ -37,7 +37,9 @@
                     </div>
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.Email, "Email", new { @class = "form-label" })
-                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @readonly = "readonly" })
+                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+
                     </div>
                 </div>
 
