--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Edit.cshtml
@@ -31,7 +31,8 @@
             <div class="row">
                 <div class="col-md-6 mb-3">
                     @Html.LabelFor(model => model.Email, "Email", new { @class = "form-label" })
-                    @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @readonly = "readonly" })
+                    @Html.TextBoxFor(model => model.Email, new { @class = "form-control"})
+                    @Html.ValidationMessageFor(model => model.NgaySinh, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-md-6 mb-3">
                     @Html.LabelFor(model => model.SoDienThoai, "Số Điện Thoại", new { @class = "form-label" })
