--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
@@ -58,8 +58,10 @@
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.TrangThai, "Trạng Thái Lớp Học", new { @class = "form-label" })
                         <span class="text-danger">*</span>
-                        @Html.DropDownListFor(model => model.TrangThai, new SelectList(new[] { "Sắp Mở", "Đang Học", "Đã Kết Thúc" }), new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.TrangThai, new SelectList(Enum.GetValues(typeof(QuanLyThongTinDaoTao.Models.TrangThaiLopHoc))), new { @class = "form-control" })
+
                     </div>
+
 
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.SoLuongToiDa, "Số Lượng Tối Đa", new { @class = "form-label" })
