--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Edit.cshtml
@@ -47,8 +47,10 @@
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.TrangThai, "Trạng Thái Lớp Học", new { @class = "form-label" })
-                        @Html.DropDownListFor(model => model.TrangThai, new SelectList(new[] { "Sắp Mở", "Đang Học", "Đã Kết Thúc" }), new { @class = "form-control" })
+                        <span class="text-danger">*</span>
+                        @Html.DropDownListFor(model => model.TrangThai, new SelectList(Enum.GetValues(typeof(QuanLyThongTinDaoTao.Models.TrangThaiLopHoc))), new { @class = "form-control" })
                     </div>
+
 
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.SoLuongToiDa, "Số lượng tối đa", new { @class = "form-label" })
