--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -25,26 +25,30 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <div class="dropdown-menu dropdown-menu-left" aria-labelledby="userDropdown">
                     @*<a class="dropdown-item" style="color:red" href="@Url.Action("Details", "NguoiDung", new { id = u.AdminId })">
-                            <i class="fas fa-user"></i> Xin chào: @u.TEN_ADMIN
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/User/DangXuat">
-                            <i class="fas fa-sign-out-alt"></i> ĐĂNG XUẤT
-                        </a>*@
+                        <i class="fas fa-user"></i> Xin chào: @u.TEN_ADMIN
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/User/DangXuat">
+                        <i class="fas fa-sign-out-alt"></i> ĐĂNG XUẤT
+                    </a>*@
                 </div>
 
             </li>
         </ul>
         <!-- Navbar Search-->
-        <form class="d-none d-md-inline-block form-inline w-50 md-4 ms-xxl-5">
-            <div class="input-group">
-                <input type="search" class="form-control" id="search" name="search"
+        <form class="d-none d-md-inline-block form-inline w-50 ms-lg-5">
+            <div class="input-group rounded shadow-sm">
+                <input type="search" class="form-control border-0 py-2 px-3" id="search" name="search"
                        value="@ViewBag.Search"
-                       placeholder="Tìm Kiếm" />
-                <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i></button>
+                       placeholder="🔍 Tìm kiếm..." aria-label="Search">
+                <button class="btn btn-outline-light bg-primary text-white px-4" id="btnNavbarSearch" type="submit">
+                    <i class="fas fa-search"></i>
+                </button>
             </div>
         </form>
+
     </nav>
+
     <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
             <nav class="sb-sidenav accordion bg-secondary " id="sidenavAccordion">
@@ -76,8 +80,8 @@
                             <i class="fa fa-keyboard me-2"></i>Điểm Danh Học Viên
                         </a>
                         <div class="sb-sidenav-footer">
-                            <div class="small">Logged in as:</div>
-                            Start Bootstrap
+                            @*<div class="small">Logged in as:</div>
+                            Start Bootstrap*@
                         </div>
                     </div>
                 </div>
@@ -109,6 +113,7 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
     <script src="~/Areas/Admin/Asset/js/datatables-simple-demo.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
     <script>
             document.addEventListener("DOMContentLoaded", function () {
                 var message = '@Html.Raw(TempData["Message"])';
