--- a/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Shared/_MainLayout.cshtml
@@ -67,29 +67,40 @@
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="@Url.Action("Index", "Courses")" class="nav-item nav-link">Khóa Học</a>
-            </div>
-            <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Học Tập</a>
-                <div class="dropdown-menu fade-down m-0">
-                    <a href="@Url.Action("LichHoc", "QuanLyHocTap")" class="dropdown-item">Lịch Học</a>
-                    <a href="@Url.Action("LopHocDaDangKy", "QuanLyHocTap")" class="dropdown-item">Danh Sách Lớp Đăng Ký</a>
-                </div>
-            </div>
-            <nav class="navbar navbar-light bg-light ms-auto me-lg-5" style="width: 300px;">
-                <div class="container-fluid">
-                    <form class="d-flex w-100">
-                        <input class="form-control me-2 w-75" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </nav>
 
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav me-auto p-4 p-lg-0">
+                <a href="@Url.Action("Index", "Courses")" class="nav-item nav-link">Khóa Học</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Học Tập</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="@Url.Action("LichHoc", "QuanLyHocTap")" class="dropdown-item">Lịch Học</a>
+                        <a href="@Url.Action("LopHocDaDangKy", "QuanLyHocTap")" class="dropdown-item">Danh Sách Lớp Đăng Ký</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Search Form - centered with margin -->
+            <form class="d-flex mx-auto m-3" style="width: 380px;">
+                <div class="input-group rounded-pill shadow-sm border-0 overflow-hidden">
+                    <input type="search"
+                           class="form-control border-0 py-2 ps-3 pe-2 bg-light"
+                           id="search"
+                           name="search"
+                           value="@ViewBag.Search"
+                           placeholder="Tìm kiếm..."
+                           aria-label="Search"
+                           style="outline: none; box-shadow: none;">
+                    <button class="btn btn-secondary px-3"
+                            type="submit"
+                            style="border-top-left-radius: 0; border-bottom-left-radius: 0;">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </form>
         </div>
     </nav>
-
     <!-- Navbar End -->
     <!-- Carousel Start -->
     <!-- Carousel End -->
@@ -174,8 +185,6 @@
     </div>
     <!-- Footer End -->
     <!-- Back to Top -->
-
-
     <!-- JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/Asset/lib/wow/wow.min.js"></script>
